--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
   </div>
   </header>
-  
+
   <div class="vh-100 d-flex">
     <div id="carouselExample" class="carousel slide flex-shrink-0 position-relative">
       <div class="carousel-inner">
@@ -107,61 +107,63 @@
   </div>
 
   <div class="vh-100 d-flex-basis">
-  <div class="map">
-    <h1 class="title-form">Mapa de Aranjuez</h1>
-    <p class="lead mb-4 fw-bold text-center">Accede al mapa de la ciudad y descubre sus rincones</p>
-    <div class="map-image">
-      <img src="images/mapa.png" alt="Aranjuez Map Image" style="max-width: 100%; height: auto; margin: 0;">
-    </div>
-  </div>
-
-
-
-  <div class="container mt-3 vh-100">
-    <h1 class="title-form" id="formulario">Formulario de contacto</h1>
-    <div class="mb-3">
-      <label for="nombre" class="form-label fs-4 text-center">Nombre completo:</label>
-      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
-    </div>
-  
-    <div class="mb-3">
-      <label for="nombre" class="form-label fs-4 text-center">Teléfono:</label>
-      <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Introduce tu teléfono" required>
-    </div>
-
-    <div class="mb-3">
-      <label for="email" class="form-label fs-4 text-center">Correo electrónico:</label>
-      <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email" required>
-    </div>
-  
-    <div class="mb-3">
-      <label for="dudas" class="form-label fs-4 text-center">Dudas o sugerencias:</label>
-      <textarea class="form-control" id="dudas" name="dudas" rows="3" placeholder="Escribe tu mensaje" required></textarea>
-    </div>
-  
-    <div class="d-flex justify-content-center">
-      <button type="submit" id="formulario" class="btn btn-dark text-center">Enviar</button>
-    </div>
-  </div>
-  
-
-
-  <footer class="py-3 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-muted ">
-        &copy; 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
-      </p>
-      <div id="scroll-button-container">
-        <img id="myBtn" src="images/arrow-up.svg" onclick="topFunction()" >
+    <div class="map">
+      <h1 class="title-form">Mapa de Aranjuez</h1>
+      <p class="lead mb-4 fw-bold text-center">Accede al mapa de la ciudad y descubre sus rincones</p>
+      <div class="map-image">
+        <img src="images/mapa.png" alt="Aranjuez Map Image" style="max-width: 100%; height: auto; margin: 0;">
       </div>
     </div>
-  </footer>
 
 
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="js/scripts.js"></script>
+    <div class="formulario">
+      <h1 class="title-form" id="formulario">Formulario de contacto</h1>
+      <div class="mb-3">
+        <label for="nombre" class="form-label fs-4 ">Nombre completo:</label>
+        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="nombre" class="form-label fs-4 ">Teléfono:</label>
+        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Introduce tu teléfono"
+          required>
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label fs-4 ">Correo electrónico:</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="dudas" class="form-label fs-4 ">Dudas o sugerencias:</label>
+        <textarea class="form-control" id="dudas" name="dudas" rows="3" placeholder="Escribe tu mensaje"
+          required></textarea>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <button type="submit" id="formulario" class="btn btn-dark text-center">Enviar</button>
+      </div>
+    </div>
+
+
+
+    <footer class="py-3 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-muted ">
+          &copy; 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
+        </p>
+        <div id="scroll-button-container">
+          <img id="myBtn" src="images/arrow-up.svg" onclick="topFunction()">
+        </div>
+      </div>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
